tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_in_param_name_extern.objc3
// Negative fixture: declaration qualifiers are not valid parameter identifiers.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierInParamNameExtern;

fn add(extern: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
